# machine-learning-playground

./: .gitignore  pyproject.toml  requirements.txt
src/Classic_ML/: logistic_regression.py
src/NLP/: __init__.py  pad_sequences.py
src/ml/: __init__.py  logistic_regression.py
tests/: test_logistic_regression.py  test_pad_sequences.py
